main.css
/* ... */
@media only screen and (max-width: 300px){
    .book-class-main .class-summary .summary-details .summary-list{
        grid-template-columns: repeat(2,auto);
        grid-template-rows: repeat(3,auto);
    }
}





/*
===================================================|
---------------------------------------------------|

            ORDERING PAGE

---------------------------------------------------|
===================================================|
*/

.underline{
    text-decoration: underline;
}
.order-main{
    /* min-height: 100vh; */
}
.before-you-order{
    margin-bottom: 32px;
    text-align: center;

    display: none;
    translate: 0 100px;
    opacity: 0;
    transition: translate 500ms ease, opacity 300ms ease;
}
.before-you-order.open{
    display: block;
}
.before-you-order.show{
    translate: 0px 0px;
    opacity: 1;
}


.before-you-order h2,
.before-you-order p{
    line-height: 1.4em;
}
.before-you-order > header > h2{
    font-size: 3rem;
}
.before-you-order > header > p{
    font-size: 2rem;
    font-weight: 700;
    margin-bottom: 1rem;
}
.before-you-order > ul{
    list-style-position: inside;
    max-width: 600px;
    margin: 0 auto 1rem auto;
    background-color: hsl(0 0% 10%);
    border-radius: 16px;
    padding: 16px;
}
.before-you-order > ul > li{
    margin-bottom: 16px;
    font-weight: 500;
    line-height: 1.4em;
    font-size: 1rem;
    text-align: left;
    text-wrap: pretty;
}

.before-you-order .open-order-form-btn{
    border: none;
    padding: 10px 15px;
    
    font-size: 1rem;
    font-weight: 700;
    color: var(--fc-primary);
    text-shadow: 2px 2px 3px black;
    border-radius: 16px;
    background-color: var(--site-btn-color);
    box-shadow: 2px 2px 10px black,
    inset 2px 2px 4px hsl(0 0% 100% / 0.3);
}
/*
=========================================|
        ORDER FORM
=========================================|
*/


.ordering-area{
    display: none;

    opacity: 0;
    transition: opacity 300ms ease;
}
.ordering-area.open{
    display: block;
}
.ordering-area.show{
    opacity: 1;
}
.ordering-area > header{
    
}
.ordering-area > header .field{
    max-width: 500px;
    margin: 0 auto;
    padding: 16px 64px;
    text-align: center;
    outline: 1px solid var(--fc-rare);
    border-radius: 16px;
}
.ordering-area > header .field > label{
    display: block;
    margin-bottom: 12px;
}


/* === ORDER FORM */

.order-form{
    max-width: 700px;
    margin: 0 auto 128px auto;
}
.order-form input[hidden=true]{
    display: none;
}
.order-form .field.required input,
.order-form .field.required select,
.order-form .field.required textarea{
    outline: 2px solid red;
}
.order-form .field.required .field-output{
    color: red;
}
.order-form select,
.order-form input,
.order-form textarea,
.order-form .form-icon{
    /* margin-left: 12px; */
    cursor: pointer;
}
.order-form .field-output{
    font-size: .67rem;
    font-weight: 500;
    opacity: 1;
    transition: opacity 300ms ease;
}
.order-form .field-output.show{
    opacity: 1;
}
.order-form > header > h2{
    color: var(--fc-rare);
    font-size: 16px;
    padding: 8px;
}



/* === ORDER ITEMS === */
.order-items{
    outline: 1px solid var(--fc-rare);
    border-radius: 16px;
}
#OrderItemsInput{
   display: none; 
}
/* === ORDER ITEM TABS === */

.order-item-tab-list{
    list-style: none;
    outline: 1px solid var(--fc-rare);
    border-radius: 16px;
    
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-template-rows: auto;
}
.order-item-tab-intro{
    grid-column: 1/7;
    grid-row: 1;

    position: relative;
    padding: 14px;
    text-align: center;
    font-size: .8rem;
    font-weight: 700;
    /* color: var(--site-color-accent2); */

    display: none;

    opacity: 0;
    transition: opacity 300ms ease;
}
.order-item-tab-intro.open{
    display: block;
}
.order-item-tab-intro.show{
    opacity: 1;
}
.order-item-tab-intro::before{
    content: "";
    position: absolute;
    top: 0; left: 0;
    width: 100px;
    height: 100%;
    border-radius: 16px;
    background-image: var(--img-icon-sugar-cookies);
    background-repeat: no-repeat;
    background-size: 32px;
    background-position: center;
}
.order-item-tab-intro::after{
    content: "";
    position: absolute;
    top: 0; right: 0;
    width: 100px;
    height: 100%;
    border-radius: 16px;
    background-image: var(--img-icon-cupcakes);
    background-repeat: no-repeat;
    background-size: 32px;
    background-position: center;
}

.order-item-tab{
    grid-row: 1;

    position: relative;
    text-align: center;
    outline: 1px solid var(--fc-rare);
    border-radius: 16px;
    padding-block: 4px;
    padding-inline: 16px;

    display: grid;
    grid-template-columns: repeat(2,auto);
    grid-template-rows: auto;
    gap: 8px;

    opacity: 0;
    transition: opacity 300ms ease;
}
.order-item-tab.show{
    opacity: 1;
}
.order-item-tab.empty-field{
    animation: glowingRed 1.6s linear infinite;
}
@keyframes glowingRed {
    0%{
        box-shadow: inset 0px 0px 0px red;
    }
    50%{
        box-shadow: inset 0px 0px 20px red
    }
    100%{
        box-shadow: inset 0px 0px 0px red
    }
}
.order-item-tab::before{
    content: "";
    position: absolute;
    inset: 0;
    border-radius: 16px;
    background: var(--site-gradient);
    z-index: -1;

    opacity: 0;
    transition: opacity 300ms ease;
}
.order-item-tab.active::before{
    opacity: 1;
}
.order-item-tab > div{
    font-size: .9rem;
    font-weight: 500;
    line-height: 1.2em;
    pointer-events: none;

    opacity: 0.5;
    transition: opacity 300ms ease;
}
.order-item-tab.active > div{
    opacity: 1;
}
.order-item-tab > img{
    width: 32px;
    display: inline-block;
    pointer-events: none;
    margin: 0 auto;

    opacity: 0.5;
    transition: opacity 300ms ease;
}
.order-item-tab.active > img{
    opacity: 1;
}
/* ... */

